--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -5,10 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
+    <meta property="og:title" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="../src/logo.jpg" />
+    <meta property="twitter:title" content="Celostrials" />
+    <meta property="twitter:description" content="Extraterrestrial Celo NFTs" />
+    <meta property="twitter:image" content="../src/logo.jpg" />
+    <meta property="twitter:card" content="Extraterrestrial Celo NFTs" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Celostrials</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
