update meta tags

--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -10,10 +10,16 @@
     <meta property="og:url" content="" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="../src/logo.jpg" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/Bridgerz/nft/main/packages/react-app/src/logo.jpg"
+    />
     <meta property="twitter:title" content="Celostrials" />
     <meta property="twitter:description" content="Extraterrestrial Celo NFTs" />
-    <meta property="twitter:image" content="../src/logo.jpg" />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/Bridgerz/nft/main/packages/react-app/src/logo.jpg"
+    />
     <meta property="twitter:card" content="Extraterrestrial Celo NFTs" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
